[package]
name = "milktea"
version = "0.1.0"
edition = "2021"
authors = ["Aemilia M. Shen <aemilia.shene89de6@tutamail.com>"]
description = "A small typed lambda calculus interpreter"
license = "MIT"
repository = "https://github.com/aemeath-ink/milktea"

[dependencies]
rustyline = "14"

[profile.release]
lto = true
opt-level = 3
